--- a/source/assets/stylesheets/app.scss
+++ b/source/assets/stylesheets/app.scss
@@ -4,34 +4,8 @@
 @import 'neat/neat';
 @import 'bitters/bitters';
 
-// Overide some Bitters variables
-// Original setting can be found in source/assets/stylesheets/bitters/_variables.scss
-$blue: #477DCA;
-$dark-gray: #333;
-$medium-gray: #999;
-$light-gray: #DDD;
-$light-red: #FBE3E4;
-$light-yellow: #FFF6BF;
-$light-green: #E6EFC2;
-
-// Body Color
-$base-body-color: white;
-
-//  Font Colors
-$base-font-color: $dark-gray;
-$base-accent-color: $blue;
-
-//  Text Link Colors
-$base-link-color: $base-accent-color;
-$hover-link-color: darken($base-accent-color, 15);
-
-// Border color
-$base-border-color: $light-gray;
-
-// Flash Colors
-$error-color: $light-red;
-$notice-color: $light-yellow;
-$success-color: $light-green;
+// Original Bitters setting can be found in
+// source/assets/stylesheets/bitters/_variables.scss
 
 header.navigation {
   $navigation-background: $dark-gray;
