Format sample text in slim

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -43,11 +43,10 @@ header class='navigation'
       label.modal-close for="modal-1"
       h1 Be the god!
       p.intro Cause this is like corpse of the page, from which you can recreate new shiny page!
-      p.body
-        Try just copy and paste from this document, which can be found in
-        this repo at the path <code>./source/index.html.slim</code>.<br> Or just
-        replace text and assets. Also try to change some of the sass variables
-        for colours and typography. Play with it and find the best way around.
+      p.body Try just copy and paste from this document, which can be found in
+              this repo at the path <code>./source/index.html.slim</code>.<br> Or just
+              replace text and assets. Also try to change some of the sass variables
+              for colours and typography. Play with it and find the best way around.
 
 
 #container
@@ -169,19 +168,25 @@ header class='navigation'
         img alt="" src="https://raw.github.com/Magnus-G/Random/master/placeholder_logo_2.png"
       .bullet-content
         h2 This Bullet Title
-        p Lorem dolor sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum impedit. Odit officia autem.
+        p Lorem dolor sit amet consectetur adipisicing elit. Doloremque, minus,
+          blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste
+          magnam accusamus molestias quo illum impedit. Odit officia autem.
     .bullet.three-col-bullet
       .bullet-icon.bullet-icon-2
         img alt="" src="https://raw.github.com/Magnus-G/Random/master/placeholder_logo_3.png"
       .bullet-content
         h2 Another Bullet Title
-        p Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum.
+        p Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque,
+          minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto
+          aliquam iste magnam accusamus molestias quo illum.
     .bullet.three-col-bullet
       .bullet-icon.bullet-icon-3
         img alt="" src="https://raw.github.com/Magnus-G/Random/master/placeholder_logo_4.png"
       .bullet-content
         h2 Last Bullet Title
-        p Lorem ipsum sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum impedit. Odit officia autem.
+        p Lorem ipsum sit amet consectetur adipisicing elit. Doloremque, minus,
+          blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste
+          magnam accusamus molestias quo illum impedit. Odit officia autem.
 
   footer.footer
     .footer-logo
