Format text in slim

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -218,5 +218,6 @@ header class='navigation'
         li
           a href="javascript:void(0)"  Privacy Policy
     hr
-      p Disclaimer area lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, nostrum repudiandae saepe.
+      p Disclaimer area lorem ipsum dolor sit amet, consectetur adipisicing
+        elit. Rerum, nostrum repudiandae saepe.
 
