--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -44,7 +44,7 @@ header class='navigation'
       h1 Be the god!
       p.intro Cause this is like corpse of the page, from which you can recreate new shiny page!
       p.body Try just copy and paste from this document, which can be found in
-              this repo at the path <code>./source/index.html.slim</code>.<br> Or just
+              this repo at the path <code>./source/index.html.slim</code>. Or just
               replace text and assets. Also try to change some of the sass variables
               for colours and typography. Play with it and find the best way around.
 
@@ -56,7 +56,8 @@ header class='navigation'
     | This is just small excerpt from what is possible with all the
     a href='http://bourbon.io/'  Bourbon,
     a href='http://neat.bourbon.io/'  Neat,
-    a href='http://bitters.bourbon.io/'  Bitters and
+    a href='http://bitters.bourbon.io/'  Bitters
+    |  and
     a href='http://refills.bourbon.io/'  Refils.
     |  Go there and search for the truth!
 
@@ -95,7 +96,9 @@ header class='navigation'
       .card-header
         | Another Card
       .card-copy
-        p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, officiis sunt neque facilis culpa molestiae necessitatibus delectus veniam provident.
+        p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga,
+          officiis sunt neque facilis culpa molestiae necessitatibus delectus
+          veniam provident.
       .card-stats
         ul
           li
@@ -113,7 +116,9 @@ header class='navigation'
       .card-header
         | The Last Card
       .card-copy
-        p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, officiis sunt neque facilis culpa molestiae necessitatibus delectus veniam provident.
+        p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga,
+          officiis sunt neque facilis culpa molestiae necessitatibus delectus
+          veniam provident.
       .card-stats
         ul
           li
